feat: 2.2 done and added others questions

--- a/cp2425t.sty
+++ b/cp2425t.sty
@@ -337,6 +337,16 @@
 	\includegraphics[width=0.40\textwidth]{cp2425t_media/lhs.jpg}
 \end{center}
 }
+\def\treeA{
+\begin{center}
+	\includegraphics[width=0.30\textwidth]{cp2425t_media/treeA.png}
+\end{center}
+}
+\def\treeB{
+\begin{center}
+	\includegraphics[width=0.30\textwidth]{cp2425t_media/treeB.png}
+\end{center}
+}
 \def\figura{\begin{figure}[!ht]
 \centering
 \resizebox{0.22625\textwidth}{!}{%
