--- a/cp2425t/cp2425t.tex
+++ b/cp2425t/cp2425t.tex
@@ -269,10 +269,10 @@
 
 %====== DEFINIR GRUPO E ELEMENTOS =============================================%
 
-\group{G99}
-\studentA{xxxxxx}{Nome }
-\studentB{xxxxxx}{Nome }
-\studentC{xxxxxx}{Nome }
+\group{G2}
+\studentA{104356}{João d'Araújo Dias Lobo }
+\studentB{90817}{Mariana Rocha Cristino }
+\studentC{104439}{Rita da Cunha Camacho }
 
 %==============================================================================%
 
@@ -768,15 +768,94 @@ que sejam necessárias.
 Primeira parte:
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{7}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{primes}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{smallestPrimeFactor}\mathbin{::}(\mathbb{Z},\mathbb{Z})\to \mathbb{Z}{}\<[E]%
+\\
+\>[B]{}\Varid{smallestPrimeFactor}\mathrel{=}\Varid{cond}\;(\uncurry{(\mathbin{>})}\comp ((\mathbin{\uparrow}\mathrm{2})\times\Varid{id}))\;\p2{}\<[E]%
+\\
+\>[B]{}\hsindent{7}{}\<[7]%
+\>[7]{}(\Varid{cond}\;((\equiv \mathrm{0})\comp \uncurry{\Varid{mod}}\comp \Varid{swap})\;\p1\;(\Varid{smallestPrimeFactor}\comp (\succ \times\Varid{id}))){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{g}\;\mathrm{1}\mathrel{=}i_1\;(){}\<[E]%
+\\
+\>[B]{}\Varid{g}\;\Varid{n}\mathrel{=}i_2\;(\Varid{smallestPrimeFactor}\;(\mathrm{2},\Varid{n}),\Varid{n}\div \Varid{smallestPrimeFactor}\;(\mathrm{2},\Varid{n})){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{primes}\mathrel{=}\anaList{\Varid{g}}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 Segunda parte:
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{5}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{prime\char95 tree}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\mbox{\onelinecomment  mergeTrees}{}\<[E]%
+\\
+\>[B]{}\Varid{mergeTrees}\mathbin{::}(\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z},\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z})\to \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}{}\<[E]%
+\\
+\>[B]{}\Varid{mergeTrees}\;(\Conid{Var}\;\Varid{v1},\Conid{Var}\;\Varid{v2})\mathrel{=}\Conid{Term}\;\mathrm{1}\;[\mskip1.5mu \Conid{Var}\;\Varid{v1},\Conid{Var}\;\Varid{v2}\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\Varid{mergeTrees}\;(\Conid{Var}\;\Varid{v},\Conid{Term}\;\Varid{o}\;\Varid{sub})\mathrel{=}\Conid{Term}\;\Varid{o}\;(\Conid{Var}\;\Varid{v}\mathbin{:}\Varid{sub}){}\<[E]%
+\\
+\>[B]{}\Varid{mergeTrees}\;(\Conid{Term}\;\Varid{o}\;\Varid{sub},\Conid{Var}\;\Varid{v})\mathrel{=}\Conid{Term}\;\Varid{o}\;(\Varid{sub}\mathbin{+\!\!+}[\mskip1.5mu \Conid{Var}\;\Varid{v}\mskip1.5mu]){}\<[E]%
+\\
+\>[B]{}\Varid{mergeTrees}\;(\Conid{Term}\;\Varid{o1}\;\Varid{sub1},\Conid{Term}\;\Varid{o2}\;\Varid{sub2}){}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\mid \Varid{o1}\equiv \Varid{o2}\mathrel{=}\Conid{Term}\;\Varid{o1}\;(\Varid{mergeSubtrees}\;\Varid{sub1}\;\Varid{sub2}){}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\mid \Varid{otherwise}\mathrel{=}\Conid{Term}\;\mathrm{1}\;[\mskip1.5mu \Conid{Term}\;\Varid{o1}\;\Varid{sub1},\Conid{Term}\;\Varid{o2}\;\Varid{sub2}\mskip1.5mu]{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{mergeSubtrees}\mathbin{::}[\mskip1.5mu \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}\mskip1.5mu]\to [\mskip1.5mu \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}\mskip1.5mu]\to [\mskip1.5mu \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\Varid{mergeSubtrees}\;[\mskip1.5mu \mskip1.5mu]\;\Varid{t2}\mathrel{=}\Varid{t2}{}\<[E]%
+\\
+\>[B]{}\Varid{mergeSubtrees}\;\Varid{t1}\;[\mskip1.5mu \mskip1.5mu]\mathrel{=}\Varid{t1}{}\<[E]%
+\\
+\>[B]{}\Varid{mergeSubtrees}\;(\Varid{x}\mathbin{:}\Varid{xs})\;\Varid{ys}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\mathbf{case}\;\Varid{find}\;(\Varid{sameRoot}\;\Varid{x})\;\Varid{ys}\;\mathbf{of}{}\<[E]%
+\\
+\>[3]{}\hsindent{2}{}\<[5]%
+\>[5]{}\Conid{Just}\;\Varid{y}\to \Varid{mergeTrees}\;(\Varid{x},\Varid{y})\mathbin{:}\Varid{mergeSubtrees}\;\Varid{xs}\;(\Varid{filter}\;(\not\equiv \Varid{y})\;\Varid{ys}){}\<[E]%
+\\
+\>[3]{}\hsindent{2}{}\<[5]%
+\>[5]{}\Conid{Nothing}\to \Varid{x}\mathbin{:}\Varid{mergeSubtrees}\;\Varid{xs}\;\Varid{ys}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\mbox{\onelinecomment  Checks if two trees have the same root}{}\<[E]%
+\\
+\>[B]{}\Varid{sameRoot}\mathbin{::}\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}\to \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}\to \Conid{Bool}{}\<[E]%
+\\
+\>[B]{}\Varid{sameRoot}\;(\Conid{Term}\;\Varid{o1}\;\anonymous )\;(\Conid{Term}\;\Varid{o2}\;\anonymous )\mathrel{=}\Varid{o1}\equiv \Varid{o2}{}\<[E]%
+\\
+\>[B]{}\Varid{sameRoot}\;\anonymous \;\anonymous \mathrel{=}\Conid{False}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\mbox{\onelinecomment  Generate a tree with a prime number as root and its prime factors as children}{}\<[E]%
+\\
+\>[B]{}\Varid{primeTree}\mathbin{::}\mathbb{Z}\to \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}{}\<[E]%
+\\
+\>[B]{}\Varid{primeTree}\;\Varid{n}\mathrel{=}\Conid{Term}\;\mathrm{1}\;(\Varid{myfoldr}\;\Varid{buildTree}\;[\mskip1.5mu \Conid{Var}\;\Varid{n}\mskip1.5mu]\;(\Varid{primes}\;\Varid{n})){}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\mathbf{where}{}\<[E]%
+\\
+\>[3]{}\hsindent{2}{}\<[5]%
+\>[5]{}\Varid{buildTree}\;\Varid{prime}\;\Varid{acc}\mathrel{=}[\mskip1.5mu \Conid{Term}\;\Varid{prime}\;\Varid{acc}\mskip1.5mu]{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{geneCata}\mathbin{::}()+(\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z},\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z})\to \Conid{Exp}\;\mathbb{Z}\;\mathbb{Z}{}\<[E]%
+\\
+\>[B]{}\Varid{geneCata}\mathrel{=}\alt{\underline{\Conid{Term}\;\mathrm{1}\;[\mskip1.5mu \mskip1.5mu]}}{\Varid{mergeTrees}}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{geneAna}\mathbin{::}[\mskip1.5mu \mathbb{Z}\mskip1.5mu]\to ()+(\Conid{Exp}\;\mathbb{Z}\;\mathbb{Z},[\mskip1.5mu \mathbb{Z}\mskip1.5mu]){}\<[E]%
+\\
+\>[B]{}\Varid{geneAna}\;[\mskip1.5mu \mskip1.5mu]\mathrel{=}i_1\;(){}\<[E]%
+\\
+\>[B]{}\Varid{geneAna}\;(\Varid{x}\mathbin{:}\Varid{xs})\mathrel{=}i_2\;(\Varid{primeTree}\;\Varid{x},\Varid{xs}){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{prime\char95 tree}\mathrel{=}\Varid{hyloList}\;\Varid{geneCata}\;\Varid{geneAna}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
@@ -796,20 +875,90 @@ Definição do tipo:
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{outExpr}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{outExpr}\mathbin{::}\Conid{Expr}\;\Varid{b}\;\Varid{a}\to \Varid{a}+(\Varid{b}+(\Conid{Op},[\mskip1.5mu \Conid{Expr}\;\Varid{b}\;\Varid{a}\mskip1.5mu])){}\<[E]%
+\\
+\>[B]{}\Varid{outExpr}\;(\Conid{V}\;\Varid{n})\mathrel{=}i_1\;\Varid{n}{}\<[E]%
+\\
+\>[B]{}\Varid{outExpr}\;(\Conid{N}\;\Varid{n})\mathrel{=}(i_2\comp i_1)\;\Varid{n}{}\<[E]%
+\\
+\>[B]{}\Varid{outExpr}\;(\Conid{T}\;\Varid{op}\;\Varid{exprs})\mathrel{=}(i_2\comp i_2)\;(\Varid{op},\Varid{exprs}){}\<[E]%
 \\[\blanklineskip]%
-\>[B]{}\Varid{recExpr}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{recExpr}\mathbin{::}(\Varid{a}\to \Varid{b1})\to \Varid{b2}+(\Varid{b3}+(\Varid{b4},[\mskip1.5mu \Varid{a}\mskip1.5mu]))\to \Varid{b2}+(\Varid{b3}+(\Varid{b4},[\mskip1.5mu \Varid{b1}\mskip1.5mu])){}\<[E]%
+\\
+\>[B]{}\Varid{recExpr}\mathrel{=}\Varid{baseExpr}\;\Varid{id}\;\Varid{id}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 \emph{Ana + cata + hylo}:
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{cataExpr}\;\Varid{g}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{cataExpr}\mathbin{::}(\Varid{b2}+(\Varid{b3}+(\Conid{Op},[\mskip1.5mu \Varid{b1}\mskip1.5mu]))\to \Varid{b1})\to \Conid{Expr}\;\Varid{b3}\;\Varid{b2}\to \Varid{b1}{}\<[E]%
+\\
+\>[B]{}\Varid{cataExpr}\;\Varid{g}\mathrel{=}\Varid{g}\comp \Varid{recExpr}\;(\Varid{cataExpr}\;\Varid{g})\comp \Varid{outExpr}{}\<[E]%
 \\[\blanklineskip]%
-\>[B]{}\Varid{anaExpr}\;\Varid{g}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{anaExpr}\mathbin{::}(\Varid{a1}\to \Varid{a2}+(\Varid{b}+(\Conid{Op},[\mskip1.5mu \Varid{a1}\mskip1.5mu])))\to \Varid{a1}\to \Conid{Expr}\;\Varid{b}\;\Varid{a2}{}\<[E]%
+\\
+\>[B]{}\Varid{anaExpr}\;\Varid{g}\mathrel{=}\Varid{inExpr}\comp \Varid{recExpr}\;(\Varid{anaExpr}\;\Varid{g})\comp \Varid{g}{}\<[E]%
 \\[\blanklineskip]%
-\>[B]{}\Varid{hyloExpr}\;\Varid{h}\;\Varid{g}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{hyloExpr}\mathbin{::}(\Varid{b2}+(\Varid{b3}+(\Conid{Op},[\mskip1.5mu \Varid{c}\mskip1.5mu]))\to \Varid{c})\to (\Varid{a}\to \Varid{b2}+(\Varid{b3}+(\Conid{Op},[\mskip1.5mu \Varid{a}\mskip1.5mu])))\to \Varid{a}\to \Varid{c}{}\<[E]%
+\\
+\>[B]{}\Varid{hyloExpr}\;\Varid{h}\;\Varid{g}\mathrel{=}\Varid{cataExpr}\;\Varid{h}\comp \Varid{anaExpr}\;\Varid{g}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+\emph{Monad}:
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{5}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{6}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{9}{@{}>{\hspre}c<{\hspost}@{}}%
+\column{9E}{@{}l@{}}%
+\column{12}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\mathbf{instance}\;\Conid{Functor}\;(\Conid{Expr}\;\Varid{b}){}\<[E]%
+\\
+\>[B]{}\hsindent{6}{}\<[6]%
+\>[6]{}\mathbf{where}\;\mathsf{fmap}\;\Varid{f}\mathrel{=}\Varid{cataExpr}\;(\Varid{inExpr}\comp \Varid{baseExpr}\;\Varid{f}\;\Varid{id}\;\Varid{id}){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\mathbf{instance}\;\Conid{Applicative}\;(\Conid{Expr}\;\Varid{b})\;\mathbf{where}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\Varid{pure}\mathbin{::}\Varid{a}\to \Conid{Expr}\;\Varid{b}\;\Varid{a}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\Varid{pure}\mathrel{=}\Conid{V}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}(\Conid{V}\;\Varid{f})\mathbin{<*>}\Varid{x}\mathrel{=}\mathsf{fmap}\;\Varid{f}\;\Varid{x}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}(\Conid{N}\;\Varid{b})\mathbin{<*>}\anonymous \mathrel{=}\Conid{N}\;\Varid{b}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}(\Conid{T}\;\Varid{op}\;\Varid{fs})\mathbin{<*>}\Varid{x}\mathrel{=}\Conid{T}\;\Varid{op}\;(\map \;(\mathbin{<*>}\Varid{x})\;\Varid{fs}){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\mathbf{instance}\;\Conid{Monad}\;(\Conid{Expr}\;\Varid{b})\;\mathbf{where}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\Varid{return}\mathbin{::}\Varid{a}\to \Conid{Expr}\;\Varid{b}\;\Varid{a}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\Varid{return}\mathrel{=}\Varid{pure}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}(\bind )\mathbin{::}\Conid{Expr}\;\Varid{b}\;\Varid{a}\to (\Varid{a}\to \Conid{Expr}\;\Varid{b}\;\Varid{b1})\to \Conid{Expr}\;\Varid{b}\;\Varid{b1}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\Varid{t}\bind \Varid{g}\mathrel{=}\Varid{muExpr}\;(\mathsf{fmap}\;\Varid{g}\;\Varid{t}){}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{muExpr}\mathbin{::}\Conid{Expr}\;\Varid{b}\;(\Conid{Expr}\;\Varid{b}\;\Varid{a})\to \Conid{Expr}\;\Varid{b}\;\Varid{a}{}\<[E]%
+\\
+\>[B]{}\Varid{muExpr}{}\<[9]%
+\>[9]{}\mathrel{=}{}\<[9E]%
+\>[12]{}\Varid{cataExpr}\;\alt{\Varid{id}}{\Varid{inExpr}\comp i_2}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{u}\mathbin{::}\Varid{a}\to \Conid{Expr}\;\Varid{b}\;\Varid{a}{}\<[E]%
+\\
+\>[B]{}\Varid{u}\mathrel{=}\Conid{V}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 \emph{Maps}:
